# Exceeder

./: CMakeLists.txt  Exceeder.sln  Exceeder.vcproj  effects_one.exf  myproj.esf  res_one.exf  slides_one.exf  styles_one.exf  templ_one.exf
source/: res.rc
source/include/: Application.h  Global.h  Helpers.h  Log.h  Position.h  Presentation.h  Resources.h  Singleton.h  Storage.h  Vector.h
source/include/Defines/: Effects.h  Slides.h  Styles.h  Templates.h
source/include/Handlers/: EffectHandler.h
source/include/Parsers/: EffectParser.h  ExpressionParser.h  Parser.h  ResourceParser.h  SlideParser.h  StyleParser.h  SupfileParser.h  TemplateParser.h
source/src/: CMakeLists.txt  Elements.cpp  Helpers.cpp  Log.cpp  Main.cpp  Presentation.cpp  Resources.cpp  Storage.cpp
source/src/Handlers/: EffectHandler.cpp  NetworkHandler.cpp
source/src/Parsers/: EffectParser.cpp  ExpressionParser.cpp  Parser.cpp  ResourceParser.cpp  SlideParser.cpp  StyleParser.cpp  SupfileParser.cpp  TemplateParser.cpp
