CMAKE_MINIMUM_REQUIRED( VERSION 2.6 FATAL_ERROR )

PROJECT( "Exceeder" C CXX )

SET( CMAKE_MODULE_PATH
     "${PROJECT_SOURCE_DIR}/cmake"
     "${CMAKE_MODULE_PATH}" )

SET( TARGET_NAME        "Exceeder" )
SET( TARGET_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/source/include" )
SET( TARGET_SOURCE_DIR  "${PROJECT_SOURCE_DIR}/source/src" )

FIND_PACKAGE( Freetype )

INCLUDE_DIRECTORIES( ${FREETYPE_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${TARGET_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${TARGET_INCLUDE_DIR}/Defines )
INCLUDE_DIRECTORIES( ${TARGET_INCLUDE_DIR}/Handlers )
INCLUDE_DIRECTORIES( ${TARGET_INCLUDE_DIR}/Parsers )
INCLUDE_DIRECTORIES( "../SimplyFlat/include" )

ADD_DEFINITIONS(-lGL)

TARGET_LINK_LIBRARIES( Freetype )

ADD_SUBDIRECTORY( "source/src" )

SET_TARGET_PROPERTIES( Exceeder PROPERTIES LINKER_LANGUAGE CXX)
