CMAKE_MINIMUM_REQUIRED( VERSION 2.6 FATAL_ERROR )

PROJECT( "Exceeder" C CXX )

SET( CMAKE_MODULE_PATH
     "${PROJECT_SOURCE_DIR}/cmake"
     "${CMAKE_MODULE_PATH}" )

SET( _target Exceeder )

SET( TARGET_NAME        "Exceeder" )
SET( TARGET_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/source/include" )
SET( TARGET_SOURCE_DIR  "${PROJECT_SOURCE_DIR}/source/src" )

FIND_PACKAGE( Freetype REQUIRED )
FIND_PACKAGE( GLUT REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )

INCLUDE_DIRECTORIES( ${FREETYPE_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIRS} )

INCLUDE_DIRECTORIES( ${TARGET_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${TARGET_INCLUDE_DIR}/Defines )
INCLUDE_DIRECTORIES( ${TARGET_INCLUDE_DIR}/Handlers )
INCLUDE_DIRECTORIES( ${TARGET_INCLUDE_DIR}/Parsers )
INCLUDE_DIRECTORIES( "../SimplyFlat/include" )



FILE(GLOB_RECURSE includes_app ${TARGET_INCLUDE_DIR}/*.h)
FILE(GLOB_RECURSE sources_app ${TARGET_SOURCE_DIR}/*.c ${TARGET_SOURCE_DIR}/*.cpp)

SET( PRJ_INCLUDE
     ${includes_app} )

SET( PRJ_SOURCE
     ${sources_app} )

SOURCE_GROUP( "include" FILES ${PRJ_INCLUDE} )
SOURCE_GROUP( "src"     FILES ${PRJ_SOURCE} )


ADD_DEFINITIONS( -lGL )
ADD_DEFINITIONS( -lfreetype2 )
ADD_DEFINITIONS( -lglut )
ADD_DEFINITIONS( -lftgl )

ADD_EXECUTABLE( ${TARGET_NAME} ${PRJ_INCLUDE} ${PRJ_SOURCE} )

ADD_LIBRARY( SimplyFlat STATIC IMPORTED )
SET_PROPERTY( TARGET SimplyFlat PROPERTY
              IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/../SimplyFlat/libSimplyFlat.a")

TARGET_LINK_LIBRARIES( ${TARGET_NAME} SimplyFlat )
TARGET_LINK_LIBRARIES( ${TARGET_NAME} ${FREETYPE_LIBRARIES} )
TARGET_LINK_LIBRARIES( ${TARGET_NAME} ${FREETYPE_GL_LIBRARY} )
TARGET_LINK_LIBRARIES( ${TARGET_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )

SET_TARGET_PROPERTIES( Exceeder PROPERTIES LINKER_LANGUAGE CXX)
